# JacksonToyota

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TOYOTA ZAMBIA.docx  vcpkg.json
docs/: ARCHITECTURE.md  USER_GUIDE.md
resources/sql/: schema.sql
src/app/: Database.cpp  Database.h
src/win32/: ModernControls.h  WinMain.cpp
